# RAG-dev-plane

./: .env  .env.azure  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.azure  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/ instructions/: api.instructions.md  backend.instructions.md  evaluation.instructions.md  ingestion.instructions.md  retrieval.instructions.md
docs/: AZURE_DEPLOYMENT_PLAN.md  architecture.md  rag-dev-plane-plan.md
src/app/: config.py  dependencies.py  logging_config.py  main.py
src/app/api/: schemas.py
src/app/api/routers/: chat.py  health.py  ingest.py  router.py
src/app/chunkers/: chunker_adapter.py  ids.py  text_chunker.py
src/app/clients/: azure_auth.py  azure_chat_client.py  azure_embedding_client.py  chat_client.py  embedding_client.py  pg_vector_store.py  qdrant_client.py  vector_store.py
src/app/domain/: models.py
src/app/loaders/: base.py  html_loader.py  markdown_loader.py  pdf_loader.py  registry.py  text_loader.py
src/app/prompts/: chat_prompt.py
src/app/services/: chat_service.py  ingestion_service.py  retrieval_service.py
tests/: conftest.py  test_api.py  test_chunk_ids.py  test_chunker.py  test_loaders.py  test_services.py
